# TopCPToolKit

./: .gitignore  .gitlab-ci.yml  README.md  mkdocs.yml  setup.sh  solve_tutorial.sh
source/TopCPToolkit/: CMakeLists.txt
source/TopCPToolkit/HiggsPartons/: CalcHWWPartonHistory.h  CalcHiggsPartonHistory.h
source/TopCPToolkit/PartonHistory/: CalcHWWPartonHistory.h  CalcHZZPartonHistory.h  CalcHiggsPartonHistory.h  CalcPartonHistory.h  CalcThqPartonHistory.h  CalcTqgammaPartonHistory.h  CalcTtbarPartonHistory.h  CalcTtgammaPartonHistory.h  CalcTthPartonHistory.h  CalcTtwPartonHistory.h  CalcTtzPartonHistory.h  CalcTzqPartonHistory.h  LorentzHelper.h  PartonHistory.h  PartonHistoryUtils.h
source/TopCPToolkit/Root/: BTaggingScoresAlg.cxx  BoostedJetTaggersAlg.cxx  BootstrapGeneratorAlg.cxx  CARAlg.cxx  CalcBottomPartonHistory.cxx  CalcHWWPartonHistory.cxx  CalcHZZPartonHistory.cxx  CalcHiggsPartonHistory.cxx  CalcPartonHistory.cxx  CalcPhotonPartonHistory.cxx  CalcTTZPartonHistory.cxx  CalcThqPartonHistory.cxx  CalcTopPartonHistory.cxx  CalcTqgammaPartonHistory.cxx  CalcTtbarLightPartonHistory.cxx  CalcTtbarPartonHistory.cxx  CalcTtgammaPartonHistory.cxx  CalcTthPartonHistory.cxx  CalcTtwPartonHistory.cxx  CalcTtzPartonHistory.cxx  CalcTzqPartonHistory.cxx  CalcWPartonHistory.cxx  CalcZPartonHistory.cxx  ChargeSelectorAlg.cxx  DecoratorHelpers.cxx  DiTauMassCalculatorAlg.cxx  EventSelectionTestAlg.cxx  ExtraParticleDecorationAlg.cxx  ExtraPhotonDecorationAlg.cxx  FakeBkgCalculatorAlg.cxx  IOStatsAlg.cxx  JetMatchingAlg.cxx  JetReclusteringAlg.cxx  KLFitterAlg.cxx  KLFitterFinalizeOutputAlg.cxx  LeptonSFCalculator.cxx  LeptonSFCalculatorAlg.cxx  LinkDef.h  LorentzHelper.cxx  METMWTSelectorAlg.cxx  (+29 more)
source/TopCPToolkit/Root/dict/: ContainerProxies.cxx
source/TopCPToolkit/Root/preloader/: ComponentFactoryPreloader.cxx
source/TopCPToolkit/TopCPToolkit/: BTaggingScoresAlg.h  BoostedJetTaggersAlg.h  BootstrapGeneratorAlg.h  CARAlg.h  DiTauMassCalculatorAlg.h  EventSelectionTestAlg.h  ExtraParticleDecorationAlg.h  ExtraPhotonDecorationAlg.h  FakeBkgCalculatorAlg.h  IOStatsAlg.h  JetMatchingAlg.h  JetReclusteringAlg.h  KLFitterAlg.h  KLFitterEnums.h  KLFitterFinalizeOutputAlg.h  KLFitterResult.h  KLFitterResultAuxContainer.h  KLFitterResultContainer.h  LeptonSFCalculator.h  LeptonSFCalculatorAlg.h  ONNXWrapper.h  ParticleLevelAlg.h  PartonHistoryToSpinInputAlg.h  PartonToJetsMatchAlg.h  RunNuFlowsAlg.h  RunPartonHistoryAlg.h  RunSpaNetAlg.h  RunTtbarNNLORecursiveRewAlg.h  SVMassAlg.h  SinglelepHadronicChi2RecoAlg.h  SoftMuonSelectorAlg.h  SpinHelpers.h  TopCPToolkitDict.h  TopSpinDensityMatrixAlg.h  TtbarCPalgoAnalysis.h  TutorialAlg.h  VGammaORAlg.h  selection.xml
source/TopCPToolkit/TopEventSelection/: ChargeSelectorAlg.h  METMWTSelectorAlg.h  METSelectorAlg.h  MLLSelectorAlg.h  MLLWindowSelectorAlg.h  MWTSelectorAlg.h  NObjectPtSelectorAlg.h  NObjectSelectorAlg.h  SaveFilterAlg.h  SignEnums.h
source/TopCPToolkit/TopNNLOReweighter/: TtbarNNLORecursiveRew.h
source/TopCPToolkit/TopNuFlows/: Dilepton.h
source/TopCPToolkit/TopParticleLevel/: ParticleLevel.h
source/TopCPToolkit/TopPartons/: CalcTTZPartonHistory.h  CalcTopPartonHistory.h  CalcTtbarLightPartonHistory.h  CalcTtbarPartonHistory.h  CalcTthPartonHistory.h  CalcTzqPartonHistory.h  PartonHistory.h  PartonHistoryUtils.h
source/TopCPToolkit/TopSpaNet/: SpaNetEnums.h  TopologyBase.h  TopologyTtbarLjets.h  TopologyTtbarLjetsNu.h
source/TopCPToolkit/VectorHelpers/: AccessorHelpers.h  DecoratorHelpers.h  LorentzHelper.h
source/TopCPToolkit/python/: BTagScoresConfig.py  BoostedJetTaggersConfig.py  BootstrapGeneratorConfig.py  CARConfig.py  DiTauMassConfig.py  EventSelectionConfig.py  EventSelectionTestConfig.py  ExtraParticleDecorationConfig.py  ExtraPhotonDecorationConfig.py  FakeBkgConfig.py  IOStatsConfig.py  JetMatchingConfig.py  JetReclusteringConfig.py  KLFitterConfig.py  LeptonSFCalculatorConfig.py  PartonHistoryToSpinInputConfig.py  PartonToJetsMatchConfig.py  PerEventSFCalculatorConfig.py  SVMassConfig.py  SinglelepHadronicChi2RecoConfig.py  SoftMuonSelectorConfig.py  TopNuFlowsConfig.py  TopSpaNetConfig.py  TopSpinDensityMatrixConfig.py  TtbarAnalysisConfig.py  TtbarCPalgoConfigBlocksAnalysis.py  TtbarNNLORecursiveRewConfig.py  TutorialConfig.py  VGammaORConfig.py  bishop.py  commonAlgoConfig.py  metaConfig.py  particleLevelConfig.py  truthConfig.py
source/TopCPToolkit/share/: runTop_el.py
source/TopCPToolkit/share/nuflows/dummy/: odd.onnx
source/TopCPToolkit/src/components/: TopCPToolkit_entries.cxx
(+80 files in other folders)
